# pip-upgrade

./: .gitignore  LICENSE  README.md  pipupgrade.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
pip_box/: __init__.py  dependencies_base.py  main.py  tool.py  utils.py
pip_upgrade/: __init__.py  __main__.py  cache.py  compare_deps.py  dependencies_base.py  dev.py  main.py  pip_upgrade.py  pip_upgrade_legacy.py  store.py  tool.py  version_checker.py
pip_upgrade/repositories/: pypi_repository.py
pip_upgrade/tools/: __init__.py  clear_cache.py  config.py  cprint.py
pip_upgrade/utils/: config.py  updater_dev.py
test/: run_test.py
