[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-upgrade-tool"
version = "1.0.0"
authors = [
    {name = "Onur Cetinkol", email = "realiti44@gmail.com"},
]
description = "An easy tool for upgrading all of your packages while not breaking dependencies"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging",
]

[project.urls]
Homepage = "https://github.com/realiti4/pip-upgrade"

[project.scripts]
pip-upgrade = "pip_upgrade:main"

[tool.ruff]
line-length = 120

[tool.setuptools]
packages = ["pip_upgrade", "pip_upgrade.tools"]
