[project]
name = "pip-upgrade-tool"
version = "1.1.0b2"
description = "An easy tool for upgrading all of your packages while not breaking dependencies"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Onur Cetinkol", email = "realiti44@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging",
]

[project.optional-dependencies]
dev = ["redis"]

[project.urls]
Homepage = "https://github.com/realiti4/pip-upgrade"

[project.scripts]
pip-upgrade = "pip_upgrade:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pip_upgrade"]
